argocd/files/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - portainer.apps.k8s.dortlii.dev
      secretName: portainer-tls-secret
  rules:
    - host: portainer.apps.k8s.dortlii.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
